[gd_scene load_steps=10 format=2]

[ext_resource path="res://Misc/Fonts/Neufreit-ExtraBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Screens/CharacterSelect/CharacterSelect.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 1, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="GridContainer" parent="Main"]
margin_right = 490.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Options" type="VBoxContainer" parent="Main"]
margin_left = 494.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Options"]
margin_right = 490.0
margin_bottom = 278.0
size_flags_vertical = 3

[node name="Self" type="VBoxContainer" parent="Main/Options"]
margin_top = 282.0
margin_right = 490.0
margin_bottom = 560.0
size_flags_vertical = 3
alignment = 1

[node name="Character" type="HBoxContainer" parent="Main/Options/Self"]
margin_right = 490.0
margin_bottom = 174.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Icon" type="TextureRect" parent="Main/Options/Self/Character"]
margin_right = 150.0
margin_bottom = 174.0
rect_min_size = Vector2( 150, 150 )
expand = true
stretch_mode = 6

[node name="Name" type="Label" parent="Main/Options/Self/Character"]
margin_left = 170.0
margin_top = 68.0
margin_right = 248.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 5 )
text = "None"

[node name="Change" type="Button" parent="Main/Options/Self/Character"]
margin_left = 268.0
margin_top = 62.0
margin_right = 490.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 11
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Select Character"

[node name="Ready" type="Button" parent="Main/Options/Self"]
margin_left = 240.0
margin_top = 178.0
margin_right = 490.0
margin_bottom = 278.0
rect_min_size = Vector2( 250, 100 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 5
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "Ready"

[node name="CharacterSelect" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="Main/Options/Self/Character/Change" to="." method="_on_Change_pressed"]
[connection signal="toggled" from="Main/Options/Self/Ready" to="." method="_on_Ready_toggled"]
[connection signal="characterSelected" from="CharacterSelect" to="." method="_on_CharacterSelect_characterSelected"]
